# visual-asset-management-system

./: .prettierignore  DeveloperGuide.md  NOTICE.md  README.md
backend/: README.rst  pyproject.toml
backend/backend/customLogging/: logger.py
backend/backend/handlers/assets/: assetColumns.py  assetFiles.py  assetService.py  downloadAsset.py  fetchVisualizerAsset.py  metadata.py  revertAsset.py  uploadAllAssets.py  uploadAsset.py
backend/backend/handlers/auth/: __init__.py  finegrainedaccessconstraints.py  groups.py  pretokengen.py  scopeds3access.py
backend/backend/handlers/authn/: __init__.py
backend/backend/handlers/authz/: opensearch.py
backend/backend/handlers/comments/: addComment.py  commentService.py  editComment.py
backend/backend/handlers/config/: configService.py
backend/backend/handlers/databases/: createDatabase.py  databaseService.py
backend/backend/handlers/indexing/: streams.py
backend/backend/handlers/metadata/: create.py  delete.py  read.py
backend/backend/handlers/metadataschema/: schema.py
backend/backend/handlers/pipelines/: createPipeline.py  enablePipeline.py  pipelineService.py
backend/backend/handlers/search/: search.py
backend/backend/handlers/visualizerpipelines/: constructPipeline.py  executeVisualizerPCPipeline.py  pipelineEnd.py
backend/backend/handlers/workflows/: createWorkflow.py  executeWorkflow.py  listExecutions.py  workflowService.py
backend/backend/models/: assets.py
backend/lambdaLayers/base/: pyproject.toml  requirements.txt
backend/lambdaLayers/serviceSDK/: pyproject.toml  requirements.txt
(+120 files in other folders)
