[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Ravi Jadhav <jadravi@amazon.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
stepfunctions = "^2.3.0"
aws-lambda-powertools = "^2.7.1"
pydantic = "^1.10.4"
opensearch-py = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^7"
boto3 = "^1.24.45"
flake8 = "^6.0.0"
coverage = "^7.1.0"
mypy = "^1.0.0"
pytest-mock = "^3.10.0"
moto = "^4.1.2"
pytest-watch = "^4.2.0"
boto3-stubs = {extras = ["stepfunctions"], version = "^1.26.69"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
