[tool.poetry]
name = "base"
version = "0.1.0"
description = ""
authors = ["Kurt Scheuringer <scheurik@amazon.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aws-lambda-powertools = "2.15.0"
boto3 = "1.26.128"
mypy-boto3-stepfunctions = "1.26.21"
opensearch-py = "2.2.0"
pydantic = "1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
